:wrench: Fix heading overflow

--- a/public/styles/blog.styl
+++ b/public/styles/blog.styl
@@ -17,6 +17,7 @@
     font-weight 400
     margin 20px 0 0 0
     font-weight 700
+    overflow auto
 
     &::before
         position absolute
